xog đặt hàng vs xem hóa đơn

--- a/Normal_J6/src/main/resources/i18n/home_vi.properties
+++ b/Normal_J6/src/main/resources/i18n/home_vi.properties
@@ -6,4 +6,13 @@ aboutus.title=GIỚI THIỆU
 contactus.title=LIÊN HỆ
 product.title=SẢN PHẨM
 order.title=ĐẶT HÀNG
+detail.title=THÔNG TIN ĐẶT HÀNG
 history.title=LỊCH SỬ MUA HÀNG
+
+
+
+
+
+
+ 
+                 
