--- a/Normal_J6/src/main/resources/i18n/home.properties
+++ b/Normal_J6/src/main/resources/i18n/home.properties
@@ -6,4 +6,6 @@ aboutus.title=ABOUT US
 contactus.title=CONTACT US
 product.title=PRODUCT
 order.title=ORDER
+detail.title=ORDER INFORMATION
+
 history.title=PURCHASE HISTORY
